--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,8 @@
 
 S3method(sar,data.frame)
 S3method(sar,default)
-export()
+export(az_rec_endpoint)
+export(az_rec_model)
 export(az_rec_service)
 export(item_predict)
 export(print.sar)
