--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,11 @@
 
 S3method(sar,data.frame)
 S3method(sar,default)
-export(az_rec_endpoint)
-export(az_rec_model)
 export(az_rec_service)
 export(item_predict)
 export(print.sar)
+export(rec_endpoint)
+export(rec_model)
 export(sar)
 export(user_pred_metrics)
 export(user_predict)
