doc update, add set_sar_threads function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(print.sar)
 export(rec_endpoint)
 export(rec_model)
 export(sar)
+export(set_sar_threads)
 export(user_pred_metrics)
 export(user_predict)
 import(AzureRMR)
