--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,6 @@ Authors@R: c(
     )
 Description: SAR is a fast, scalable, adaptive algorithm for personalized recommendations based on user transactions and items description. It produces easily explainable/interpretable recommendations and handles "cold item" and "semi-cold user" scenarios. This package provides two implementations of SAR: a standalone implementation, and an interface to a web service in Azure. The former allows fast and easy experimentation, and the latter provides robust scalability and extra features for production use.
 License: MIT + file LICENSE
-Encoding: UTF-8
 Depends: 
     R (>= 3.3)
 Imports: 
@@ -15,15 +14,18 @@ Imports:
     AzureStor,
     dplyr (>= 0.7),
     Matrix,
-    httr,
-    jsonlite,
     R6,
     parallel,
     Rcpp (>= 0.12),
     RcppParallel
+Suggests:
+    testthat
 LinkingTo: Rcpp,
     RcppArmadillo,
     RcppParallel
 SystemRequirements: GNU make
 Roxygen: list(markdown=TRUE)
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
+Remotes:
+    cloudyr/AzureRMR,
+    cloudyr/AzureStor
