--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: c(
     person("Hong", "Ooi", , "hongooi@microsoft.com", role = c("aut", "cre")),
     person("Microsoft", role="cph")
     )
-Description: SAR is a fast, scalable, adaptive algorithm for personalized recommendations based on user transactions and items description. It produces easily explainable/interpretable recommendations and handles "cold item" and "semi-cold user" scenarios. This package provides two implementations of SAR: a standalone implementation, and an interface to a web service in Azure. The former allows fast and easy experimentation, and the latter provides robust scalability and extra features for production use.
+Description: SAR ('Smart Adaptive Recommendations') is a fast, scalable, adaptive algorithm for personalized recommendations based on user transactions and item descriptions. It produces easily explainable/interpretable recommendations and handles "cold item" and "semi-cold user" scenarios. This package provides two implementations of SAR: a standalone implementation, and an interface to a web service in Microsoft's 'Azure' cloud. The former allows fast and easy experimentation, and the latter provides robust scalability and extra features for production use.
 License: MIT + file LICENSE
 Depends: 
     R (>= 3.3)
