--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,8 @@ Authors@R: c(
     person("Microsoft", role="cph")
     )
 Description: 'Smart Adaptive Recommendations' (SAR) is the name of a fast, scalable, adaptive algorithm for personalized recommendations based on user transactions and item descriptions. It produces easily explainable/interpretable recommendations and handles "cold item" and "semi-cold user" scenarios. This package provides two implementations of 'SAR': a standalone implementation, and an interface to a web service in Microsoft's 'Azure' cloud: <https://github.com/Microsoft/Product-Recommendations>. The former allows fast and easy experimentation, and the latter provides robust scalability and extra features for production use.
+URL: https://github.com/Hong-Revo/SAR
+BugReports: https://github.com/Hong-Revo/SAR/issues
 License: MIT + file LICENSE
 Depends: 
     R (>= 3.3)
